--- a/my-electron-app/package.json
+++ b/my-electron-app/package.json
@@ -11,5 +11,9 @@
   "description": "",
   "devDependencies": {
     "electron": "^34.3.0"
+  },
+  "dependencies": {
+    "active-win": "^8.2.1",
+    "node-mac-permissions": "^2.4.0"
   }
 }
