--- a/my-electron-app/package.json
+++ b/my-electron-app/package.json
@@ -6,20 +6,39 @@
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "electron-builder",
+    "build:verbose": "DEBUG=electron-builder electron-builder",
     "pack": "electron-builder --dir"
   },
   "build": {
     "appId": "com.example.my-electron-app",
-    "productName": "My Electron App",
+    "productName": "MyElectronApp",
     "mac": {
       "category": "public.app-category.utilities",
-      "target": "dmg",
+      "target": ["dmg", "zip"],
       "icon": "build/icon.icns"
-    }
+    },
+    "directories": {
+      "output": "dist",
+      "buildResources": "build"
+    },
+    "files": [
+      "**/*",
+      "!**/node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
+      "!**/node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
+      "!**/node_modules/*.d.ts",
+      "!**/node_modules/.bin",
+      "!**/*.{iml,o,hprof,orig,pyc,pyo,rbc,swp,csproj,sln,xproj}",
+      "!.editorconfig",
+      "!**/._*",
+      "!**/{.DS_Store,.git,.hg,.svn,CVS,RCS,SCCS,.gitignore,.gitattributes}",
+      "!**/{__pycache__,thumbs.db,.flowconfig,.idea,.vs,.nyc_output}",
+      "!**/{appveyor.yml,.travis.yml,circle.yml}",
+      "!**/{npm-debug.log,yarn.lock,.yarn-integrity,.yarn-metadata.json}"
+    ]
   },
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "My Electron application description",
   "devDependencies": {
     "electron": "^34.3.0",
     "electron-builder": "^24.13.3"
