--- a/my-electron-app/package.json
+++ b/my-electron-app/package.json
@@ -7,14 +7,19 @@
     "clean": "rm -rf dist/",
     "build": "electron-builder",
     "build:mac": "electron-builder --mac",
-    "pack": "electron-builder --dir"
+    "pack": "electron-builder --dir",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "build": {
     "appId": "com.example.my-electron-app",
     "productName": "MyElectronApp",
     "mac": {
       "category": "public.app-category.utilities",
-      "target": ["dmg", "zip"],
+      "target": [
+        "dmg",
+        "zip"
+      ],
       "icon": "build/icon.icns",
       "identity": null
     },
@@ -42,7 +47,8 @@
   "description": "My Electron application description",
   "devDependencies": {
     "electron": "^25.9.8",
-    "electron-builder": "^24.6.4"
+    "electron-builder": "^24.6.4",
+    "prettier": "^3.5.3"
   },
   "dependencies": {
     "active-win": "^8.2.1",
