--- a/base-app/package.json
+++ b/base-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-electron-app",
+  "name": "base-app",
   "version": "1.1.0",
   "main": "main.js",
   "scripts": {
@@ -12,8 +12,8 @@
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "build": {
-    "appId": "com.example.my-electron-app",
-    "productName": "MyElectronApp",
+    "appId": "com.example.base-app",
+    "productName": "BaseApp",
     "mac": {
       "category": "public.app-category.utilities",
       "target": [
@@ -44,7 +44,7 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "My Electron application description",
+  "description": "Base Electron application description",
   "devDependencies": {
     "electron": "^25.9.8",
     "electron-builder": "^24.6.4",
